Updated for Sidebar 3.0 + Fixed Image Radius + Fixed Header Clipping

--- a/plugins/obsidian-theme-luna/src/oled-friendly.css
+++ b/plugins/obsidian-theme-luna/src/oled-friendly.css
@@ -6,6 +6,15 @@
 }
 */
 
+/* Rounded corners for various elements */
+[class*="_thumbnail_"],
+[class*="_imageWrapper_"],
+[class*="_coverImage_"],
+[class*="_overlayIconWrapperAlbum_"],
+[class*="_playButton_"] {
+	border-radius: 10px !important;
+}
+
 ::-webkit-scrollbar {
 	display: none;
 }
@@ -182,8 +191,9 @@
 }
 
 [class^="__NEPTUNE_PAGE"],
-[data-test="main"] {
-	margin-top: 35px;
+[data-test="main"],
+.mainContent {
+	margin-top: 5vh !important;
 }
 
 #playQueueSidebar {
